k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alumni-portal
  labels:
    app: alumni-portal
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: alumni-portal
  template:
    metadata:
      labels:
        app: alumni-portal
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: alumni-portal
        image: localhost:30085/my-repository/stalum:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /login/
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /login/
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 20
