k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alumni-service
spec:
  type: NodePort
  selector:
    app: alumni-portal
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
