k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alumni-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 2401192.imcc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alumni-service
            port:
              number: 8000
